--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob's Super Not Secret Website</title>
+    <style>
+        body {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
    Personal website under development...
